--- a/style.css
+++ b/style.css
@@ -11,3 +11,21 @@ body {
   padding: 20px;
   border-radius: 10px;
 }
+
+.btn {
+  display: block;
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
+  cursor: pointer;
+}
+
+
+.btn:hover {
+  background-color: #ddd;
+}
+
+#next-btn {
+  margin-top: 10px;
+  padding: 10px;
+}
