--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   text-align: center;
-  background-color: #fff9c4;
+  background-color: #fff3b0;
 }
 
 .quiz-container {
